Updated clustering, robustness, utils, and README
- Cleaned up clustering code
- Updated robustness code and examples
- Added helpers for utils.
- Added additional datasets to README

--- a/verification/clustering.ipynb
+++ b/verification/clustering.ipynb
@@ -10,14 +10,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "from clustering import LGKUtils\n",
+    "from clustering import LabelGuidedKMeansUtils\n",
     "\n",
     "n_outputs = 5\n",
     "verification_csv = '../data/latest/verification.csv'\n",
-    "X_orig, y_orig = LGKUtils.load_dataset(verification_csv, n_outputs)"
+    "X_orig, Y_orig = LabelGuidedKMeansUtils.load_dataset(verification_csv, n_outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "X, Y = X_orig.copy(), Y_orig.copy()\n",
+    "X, Y = LabelGuidedKMeansUtils.remove_outliers(X, Y, 10)\n",
+    "\n",
+    "print(f'dropped {X_orig.shape[0] - X.shape[0]} outliers from {X_orig.shape[0]} inputs')\n",
+    "X.shape, Y.shape"
    ]
   },
   {
@@ -30,18 +47,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "from clustering import LGKClustering, LGKUtils\n",
+    "from clustering import LabelGuidedKMeans, LabelGuidedKMeansUtils\n",
     "\n",
-    "X, y = X_orig.copy(), y_orig.copy()\n",
-    "y = LGKUtils.reduce_classes(y)\n",
-    "X, y = remove_outliers(X, y, 10)\n",
-    "lgkmc = LGKClustering().fit(X, y, init_centroid='rand') # rand, first, none\n",
-    "\n",
+    "lgkmc = LabelGuidedKMeans().fit(X, Y, init_centroid='rand') # rand, first, none"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "LabelGuidedKMeansUtils.print_summary(lgkmc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# save regions\n",
-    "LGKUtils.save(lgkmc, outdir='../artifacts')"
+    "LabelGuidedKMeansUtils.save(lgkmc, outpath='../logs/test/test_regions/lgkm.p')"
    ]
   },
   {
@@ -54,25 +90,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
-    "from clustering import LGKUtils\n",
+    "from clustering import LabelGuidedKMeansUtils\n",
     "from robustness import verify_regions, save_verified_regions\n",
     "\n",
     "# load the regions\n",
-    "lgkmc = LGKUtils.load('../artifacts/lgkm.pkl')\n",
+    "lgkmc = LabelGuidedKMeansUtils.load('../logs/test/test_regions/lgkm.p')\n",
     "regions = lgkmc.get_regions(sort=True)\n",
-    "categories = regions.get_categories()\n",
-    "\n",
-    "# grab a subset of regions to verify... (optional, you could try to verify them all)\n",
-    "subset_regions = regions[0:10]\n",
-    "\n",
-    "# verify the regions\n",
+    "categories = lgkmc.categories\n",
+    "n_categories = lgkmc.n_categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "nnet_path = '../network/models/latest/model.nnet'\n",
-    "vregions = verify_regions(nnet_path, subset_regions, categories, eprec=0.0001, rpad=10, verbose=1, timeout=timeout)\n",
-    "save_verified_regions(vregions, outdir='../artifacts/')"
+    "\n",
+    "vregions = verify_regions(nnet_path, regions, n_categories, eprec=0.0001, rpad=10, verbose=1, timeout=10)\n",
+    "    save_verified_regions(vregions, outdir=f'../logs/region_robustness_cexs/chunk_{chunk_number}')"
    ]
   }
  ],
