--- a/verification/robustness.ipynb
+++ b/verification/robustness.ipynb
@@ -50,10 +50,13 @@
     }
    ],
    "source": [
+    "import os, sys\n",
+    "sys.path.append(os.path.abspath('../.marabou'))\n",
     "from verification.utils import remove_softmax_activation\n",
     "\n",
+    "# Create verification model without softmax layer\n",
     "model_path = '../network/models/latest/model-verification'\n",
-    "remove_softmax_activation('../network/models/latest/model.h5', save_path=model_path)\n"
+    "remove_softmax_activation('../network/models/latest/model.h5', save_path=model_path)"
    ]
   },
   {
@@ -68,24 +71,24 @@
       "WARNING:tensorflow:From /Users/grese/Projects/CMU/AutonomousDriving/scad_tot/venv/lib/python3.8/site-packages/tensorflow/python/compat/v2_compat.py:96: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "s0, class:4, pred:1, epsilon:0.02105712890625 (1474 ms)\n",
-      "s1, class:0, pred:3, epsilon:0.0367431640625 (1212 ms)\n",
-      "s2, class:4, pred:0, epsilon:0.00164794921875 (721 ms)\n",
-      "s3, class:3, pred:4, epsilon:0.0108642578125 (1172 ms)\n",
-      "s4, class:3, pred:1, epsilon:0.04534912109375 (788 ms)\n",
-      "s5, class:2, pred:3, epsilon:0.02484130859375 (923 ms)\n",
-      "s6, class:2, pred:3, epsilon:0.0162353515625 (762 ms)\n",
-      "s7, class:0, pred:3, epsilon:0.04156494140625 (3203 ms)\n",
-      "s8, class:2, pred:3, epsilon:0.0362548828125 (1679 ms)\n",
-      "s9, class:0, pred:2, epsilon:0.01068115234375 (853 ms)\n",
-      "completed analysis of 10 samples in 12 seconds\n"
+      "s0, class:4, pred:1, epsilon:0.02801513671875 (1946 ms)\n",
+      "s1, class:0, pred:3, epsilon:0.04638671875 (1256 ms)\n",
+      "s2, class:4, pred:0, epsilon:0.00189208984375 (888 ms)\n",
+      "s3, class:3, pred:4, epsilon:0.01165771484375 (995 ms)\n",
+      "s4, class:3, pred:1, epsilon:0.0528564453125 (717 ms)\n",
+      "s5, class:2, pred:1, epsilon:0.0308837890625 (833 ms)\n",
+      "s6, class:2, pred:3, epsilon:0.01690673828125 (875 ms)\n",
+      "s7, class:0, pred:3, epsilon:0.04913330078125 (3164 ms)\n",
+      "s8, class:2, pred:3, epsilon:0.0380859375 (1620 ms)\n",
+      "s9, class:0, pred:2, epsilon:0.0115966796875 (1007 ms)\n",
+      "completed analysis of 10 samples in 13 seconds\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<robustness.LocalRobustness at 0x117c4b8e0>"
+       "<robustness.LocalRobustness at 0x10751cac0>"
       ]
      },
      "metadata": {},
@@ -93,25 +96,23 @@
     }
    ],
    "source": [
-    "# import os, sys\n",
-    "# sys.path.remove(os.path.abspath('../verification'))\n",
-    "# sys.path.append(os.path.abspath('../.marabou'))\n",
     "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from robustness import LocalRobustness\n",
     "\n",
-    "model_path = '../network/models/latest/model.nnet'\n",
+    "# model_path = '../network/models/latest/model.nnet'\n",
     "out_dir = '../logs'\n",
     "results_outpath = os.path.join(out_dir, 'results.csv')\n",
     "counterexamples_outpath = os.path.join(out_dir, 'counterexamples.p')\n",
-    "n = 10\n",
+    "n = 100\n",
     "X, Y = pickle.load(open('../data/latest_new/verification.p', 'rb'))\n",
     "X, Y = X[0:n], Y[0:n]\n",
     "\n",
     "lr = LocalRobustness(\n",
     "    network_path=model_path,\n",
-    "    network_options=dict(),\n",
+    "    network_version=1,\n",
+    "    network_options=dict(modelType='savedModel_v2'),\n",
     "    marabou_options=dict(solveWithMILP=True, milpTightening='none'),\n",
     "    X=X,\n",
     "    Y=Y,\n",
@@ -124,72 +125,16 @@
     "lr.analyze(\n",
     "    results_outpath=results_outpath,\n",
     "    counterexamples_outpath=counterexamples_outpath\n",
-    "    )\n",
-    "\n",
-    "# s0, class:4, pred:1, epsilon:0.02105712890625 (1472 ms)\n",
-    "# s1, class:0, pred:3, epsilon:0.0367431640625 (1234 ms)\n",
-    "# s2, class:4, pred:0, epsilon:0.00164794921875 (665 ms)\n",
-    "# s3, class:3, pred:4, epsilon:0.0108642578125 (1053 ms)\n",
-    "# s4, class:3, pred:1, epsilon:0.04534912109375 (710 ms)\n",
-    "# s5, class:2, pred:3, epsilon:0.02484130859375 (844 ms)\n",
-    "# s6, class:2, pred:3, epsilon:0.0162353515625 (713 ms)\n",
-    "# s7, class:0, pred:3, epsilon:0.04156494140625 (2885 ms)\n",
-    "# s8, class:2, pred:3, epsilon:0.0362548828125 (1548 ms)\n",
-    "# s9, class:0, pred:2, epsilon:0.01068115234375 (803 ms)"
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "lr.results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import pickle\n",
-    "# import pandas as pd\n",
-    "# from verification.tot_net import TOTUtils\n",
-    "\n",
-    "# feature_names = ('FixationDuration', 'FixationSeq', 'FixationStart', 'FixationX', \n",
-    "#                  'FixationY', 'GazeDirectionLeftZ', 'GazeDirectionRightZ', 'PupilLeft', \n",
-    "#                  'PupilRight', 'InterpolatedGazeX', 'InterpolatedGazeY', 'AutoThrottle', \n",
-    "#                  'AutoWheel', 'CurrentThrottle', 'CurrentWheel', 'Distance3D', 'MPH', \n",
-    "#                  'ManualBrake', 'ManualThrottle', 'ManualWheel', 'RangeW', 'RightLaneDist', \n",
-    "#                  'RightLaneType', 'LeftLaneDist', 'LeftLaneType')\n",
-    "# label_names = ('fast', 'med_fast', 'med', 'med_slow', 'slow')\n",
-    "\n",
-    "# train = pd.read_csv('../data/latest/train.csv', index_col=0)\n",
-    "# test = pd.read_csv('../data/latest/test.csv', index_col=0)\n",
-    "\n",
-    "# output_cols = [f'TOT_{c}' for c in label_names]\n",
-    "# X_train, Y_train = train.drop(output_cols, axis=1).to_numpy(), train[output_cols].to_numpy()\n",
-    "# X_test, Y_test = test.drop(output_cols, axis=1).to_numpy(), test[output_cols].to_numpy()\n",
-    "\n",
-    "# pickle.dump(X_train, open('../data/latest_new/X_train.p', 'wb'))\n",
-    "# pickle.dump(Y_train, open('../data/latest_new/Y_train.p', 'wb'))\n",
-    "# pickle.dump(X_test, open('../data/latest_new/X_test.p', 'wb'))\n",
-    "# pickle.dump(Y_test, open('../data/latest_new/Y_test.p', 'wb'))\n",
-    "# pickle.dump((X_train, Y_train), open('../data/latest_new/train.p', 'wb'))\n",
-    "# pickle.dump((X_test, Y_test), open('../data/latest_new/test.p', 'wb'))\n",
-    "# pickle.dump(feature_names, open('../data/latest_new/features.p', 'wb'))\n",
-    "# pickle.dump(label_names, open('../data/latest_new/labels.p', 'wb'))\n",
-    "\n",
-    "# X_correct, Y_correct = TOTUtils.filter_incorrect_samples(model_path, X_test, Y_test, network_options=dict(modelType='savedModel_v2'))\n",
-    "# pickle.dump((X_correct, Y_correct), open('../data/latest_new/verification.p', 'wb'))"
    ]
   }
  ]
