--- a/decision_tree_learning/rules_verify.ipynb
+++ b/decision_tree_learning/rules_verify.ipynb
@@ -1,30 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.7-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.7 64-bit ('venv')",
-   "metadata": {
-    "interpreter": {
-     "hash": "9ddd6d5ba3578effbb8559ddbe623e8e531c76ce875d1957098e67566a625ffe"
-    }
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -32,8 +6,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "rule1 - class:med_fast, pred:fast, result:SAT\n",
       "(array([-10.        ,   1.22877848,  -1.677     , -10.        ,\n",
@@ -154,8 +128,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Rule1(generic) - class:med_slow, pred:3, result:SAT\n",
       "counterexample:  ([-1.1982935146633251, -1.2686687624724067, -1.677, -7.218514205134348, 4.2581428527946, -2.433852824101306, -2.165789224602907, -3.9666689536306654, -3.5635422125003267, -1.848972383438428, -1.4227079179070774, 0.8719743410391199, 1.84502434831632, -3.722507074352964, -0.33725935373176813, 47.93896731416769, -6.179909118821473, 3.1308233309596316, 6.909656396133063, 0.307, 12.442600927888881, 7.708370632509362, -8.516181955122368, -5.770530848360777, -5.805253562105785], [-4.204776643100766, -1.4430701336740832, -2.2512381536967547, 0.5968215347259527, -0.30874917600016616])\n",
@@ -404,7 +378,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(array([-1.19829351,  2.60162216,  1.92739777,  1.43762161, -0.17385318,\n",
@@ -419,8 +392,9 @@
        "        -0.04599665,  1.22726963,  0.18448958,  0.90654291, -0.16232216]))"
       ]
      },
+     "execution_count": 16,
      "metadata": {},
-     "execution_count": 16
+     "output_type": "execute_result"
     }
    ],
    "source": []
@@ -469,5 +443,26 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
